add about.html contacts.html myprojects.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>My Webpage</title>
-</head>
-<body>
-	Hello, world!
-</body>
+<html>
+    <head>
+        <title>My Webpage</title>
+    </head>
+    <body>
+	    <h1>Rustam Garaev</h1>
+	    <h2>web developer</h2>
+      <menu>
+        <ul>
+          <li>home</li>
+          <li>my projects</li>
+          <li>about</li>
+          <li>contacts</li>
+        </ul>
+      </menu>
+    </body>
 </html>
