--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
       <div class="container banner">
         <header class="header">
-          <h1 class="header__name">Rustam Garaev</h1>
+          <h1 class="header__title">Rustam Garaev</h1>
           <h2 class="header__subtitle">web developer</h2>
 
           <menu class="menu">
