--- a/index.html
+++ b/index.html
@@ -16,42 +16,47 @@
 
     <body>
       
-      <div class="container banner">
-        <header class="header">
-          <h1 class="header__title">Rustam Garaev</h1>
-          <h2 class="header__subtitle">web developer</h2>
-
-          <menu class="menu">
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="myprojects.html">My projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacts.html">Contacts</a>
-            </li>
-          </ul>
-        </menu>
+      <header class="header header--background">
+        <div class="container h-100">
+          <div class="row">
+            <h1 class="header__title">Rustam Garaev</h1>
+          </div>
+          <div class="row">
+            <h2 class="header__subtitle">web developer</h2>
+          </div>
+          <div class="row align-items-end">
+            <menu class="menu">
+              <ul class="nav nav-fill">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="myprojects.html">My projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacts.html">Contacts</a>
+                </li>
+              </ul>
+            </menu>
+          </div>
+        </div>
       </header>
-      </div>
 
-      <div class="container">
-        <section class="section section__main">
+      <section class="section section__main">
+        <div class="container">
           <h1>Hello, world!</h1>
           <p>This is my first personal web page.</p>
-        </section>
-      </div>
+        </div>
+      </section>
 
-      <div class="container">
-        <footer class="footer">
-            <p class="copyright">&copy Rustam Garaev. 2020</p>
-          </footer>
-      </div>
+      <footer class="footer">
+        <div class="container">
+          <p class="copyright">&copy Rustam Garaev. 2020</p>
+        </div>
+      </footer>
     
     </body>
 </html>
