'add blog page and readme.md'

--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
@@ -51,7 +54,7 @@
             rerum molestiae quis qui. Lorem ipsum dolor sit amet consectetur 
             adipisicing elit. Minus architecto provident alias quos labore at
             recusandae tenetur ipsam? Animi, temporibus.</p>
-          <img class="photo img-fluid" src="assets/images/myPhoto.jpg" alt="my photo">
+          <img id="myphoto" class="img-fluid" src="assets/images/myPhoto.jpg" alt="my photo">
         </div>
       </section>
 
