--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Roboto&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/c17063014a.js" crossorigin="anonymous"></script>
 
     <body class="page-container">
       
@@ -48,13 +47,30 @@
 
       <section class="section section__main">
         <div class="container">
-          <h1>My contacts.</h1>
-          <div class="social">
-            <p><a href="mailto: e-mail@mail.com">Send e-mail</a></p>
-            <a href=""><i class="fab fa-vk fa-2x"></i></a>
-            <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
-            <a href=""><i class="fab fa-github fa-2x"></i></a>
-          </div>
+          <h1 class="blog-title">Blog</h1>
+            <div class="row">
+              <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3>article 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Porro ratione sapiente nemo velit similique officia placeat
+                  quos ducimus itaque iste!</p>
+              </div>
+              <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3>artile 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Porro ratione sapiente nemo velit similique officia placeat
+                  quos ducimus itaque iste!</p>
+              </div>
+              <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="">
+                <h3>article 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Porro ratione sapiente nemo velit similique officia placeat
+                  quos ducimus itaque iste!</p>
+              </div>
+            </div>
         </div>
       </section>
 
