--- a/myprojects.html
+++ b/myprojects.html
@@ -29,6 +29,9 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
@@ -46,6 +49,20 @@
         <div class="container">
           <h1>My projects</h1>
           <a href="https://github.com/ghrust">Repositories on GitHub</a>
+          <table class="table-example">
+            <tr>
+              <th>table example</th>
+              <th>table example</th>
+            </tr>
+            <tr>
+              <td>data</td>
+              <td>data</td>
+            </tr>
+            <tr>
+              <td>data</td>
+              <td>data</td>
+            </tr>
+          </table>
         </div>
       </section>
 
