--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
